src/objects/Procedencia_TipoTrabajo__c.object
<CustomObject>
    <description>Representa el conjunto de Tipos de Trabajo disponibles en una Procedencia.</description>
    <fields>
        <fullName>PRTT_LKP_Procedencia__c</fullName>
        <label>Procedencia</label>
        <referenceTo>Procedencia__c</referenceTo>
        <relationshipLabel>Tipos de Trabajo</relationshipLabel>
        <relationshipName>Procedencia_Tipos_de_Trabajo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRTT_LKP_TipoTrabajo__c</fullName>
        <label>Tipo de trabajo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WorkType.TDT_SEL_Gremio__c</field>
                <operation>equals</operation>
                <valueField>$Source.PRTT_SEL_Gremio__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Procedencias</relationshipLabel>
        <relationshipName>Procedencia_Tipos_de_Trabajo</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRTT_SEL_Gremio__c</fullName>
        <label>Gremio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <label>Procedencia: Tipo de Trabajo</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedencia: Tipos de Trabajo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>